k8s/frontend/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: burger-app-frontend
  namespace: project3
  labels:
    app: burger-app-frontend
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: burger-app-frontend
  template:
    metadata:
      labels:
        app: burger-app-frontend
    spec:
      serviceAccountName: frontend-sa  # least privilege
      containers:
        - name: burger-app-frontend
          image: khalidharbi/test-group2:latest 
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "200m" 
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 10
            failureThreshold: 3
