k8s/frontend/service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-clusterip-service
  namespace: project3
spec:
  type: ClusterIP
  selector:
    app: frontend-app
  ports:
    - port: 80
      targetPort: 80
