k8s/frontend/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: frontend-ingress
 namespace: project3
spec:
 ingressClassName: nginx
 rules:
 - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
         service:
           name: frontend-clusterip-service
           port:
             number: 80
